# Aquavaders

Arduino/motion/: pure_motion.ino
Arduino/motion/solo_mega_regional/: solo_mega_regional.ino
Arduino/motion/test_24_4/: test_24_4.ino
Arduino/motion/test_24_4/test_serial_monotor.ino/: test_serial_monotor.ino.ino
Arduino/motion/test_motors/: test_motors.ino
mapnode/: CMakeLists.txt  map.cpp  package.xml
serialnode/: CMakeLists.txt  package.xml  ros_serial_node.cpp
